feat(report): 修正传参方式
